2008-03-15  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Removed subPiece related functions. This is back port from trunk.
	* src/Piece.{h, cc} : Also rewritten getCompletedLength().
	* src/DefaultPieceStorage.{h, cc}
	* test/PieceTest.cc
	* test/DefaultPieceStorageTest.cc

2008-03-15  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Merged aria2-0.13.0+1-console.patch, PATCH#1912040

2008-03-15  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Merged aria2-0.13.0+1-peekbuf.patch, PATCH#1912038

2008-03-15  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Merged aria2-0.13.0+1-dht.patch, PATCH#1911900

2008-03-15  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Merged aria2-0.13.0+1-nls.patch, PATCH#1909984

2008-03-07  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Bump up version number to 0.13.0+1
	* configure.ac
	
	* Release 0.13.0+1

2008-03-05  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Changed inactive connection timeout to 120.
	To accept more mulually interested peers, disconnect peer when there
	is no interest between us after certain time passed.
	* src/DefaultBtInteractive.cc (checkActiveInteraction)

2008-03-05  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed the bug that aria2 only uses first dns server in resolv.conf
	when compiled with async DNS support.
	* src/DownloadEngine.cc
	* src/option_processing.cc: Lengthened DNS timeout to 30. I think old
	value '10' will be a little bit short when some DNS servers are
	offline and several DNS servers are tried. It should be configured
	by command-line option.

2008-03-04  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Merged Ross's mingw patch.
	* src/DHTRoutingTableDeserializer.cc
	* src/DHTRoutingTableSerializer.cc
	* src/Platform.{h, cc}
	* src/timegm.h
	* src/gettimeofday.h
	* src/getaddrinfo.h
	* src/SocketCore.h
	* src/common.h
	* src/inet_aton.h
	* src/DownloadEngine.h
	* src/gai_strerror.h
	* src/a2netcompat.h
	* configure.ac
	* configure